<resources>
    <string name="app_name">MyFitness</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exercises_fragment_title">Vjezbe</string>
    <string name="calendar_fragment_title">Kalendar</string>
    <string name="progress_fragment_title">Napredak</string>
    <string name="profile_fragment_title">Profil</string>
    <string name="calculator_fragment_title">BMR Kalkulator</string>
    <string name="day_workout_plan_title">Dnevni plan vjezbi</string>
    <string name="myfitness">MyFitness</string>
    <string name="register">Registracija</string>
    <string name="login">Prijava</string>

    <string-array name="body_parts_array">
        <item>Odaberi dio tijela</item>
        <item>Leđa</item>
        <item>Prsa</item>
        <item>Noge</item>
        <item>Ramena</item>
        <item>Bicepsi</item>
        <item>Tricepsi</item>
    </string-array>

    <string name="select_body_part">Select Body Part</string>
    <string name="addExercise">Dodaj vježbu</string>
    <string name="add">dodaj</string>
    <string name="btn_add_done_exercise">Napravljena vježba</string>
    <string name="label_reps_input">Broj ponavljanja</string>
    <string name="label_broj_serija">Broj serija</string>
    <string name="label_unos_tezine">Kilaža (kg)</string>
    <string name="title_unos_napravljene_vjezbe_dialog">Unos napravljene vježbe</string>
    <string name="btn_save">Spremi</string>
    <string name="hint_search_exercise">Traži vježbu</string>
    <string name="label_date">Datum</string>
    <string name="btn_cancel">Odustani</string>
    <string name="naziv_vjezbe">Naziv vježbe</string>
    <string name="opis_vjezbe">Opis vježbe</string>
    <string name="url">URL</string>
    <string name="tezina">Težina</string>
    <string name="oprema">Oprema</string>
    <string name="odustani">Odustani</string>
    <string name="lista_vjezbi">Lista Vježbi</string>
    <string name="add_exercise">Dodaj vježbu</string>

    <string-array name="difficulty_array">
        <item>Odaberi težinu</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="equipment_array">
        <item>Bučice</item>
        <item>Girje</item>
        <item>Bench</item>
        <item>Smith mašina</item>
        <item>Sprava</item>
    </string-array>

    <string name="monday">Ponedjeljak</string>
    <string name="tuesday">Utorak</string>
    <string name="wednesday">Srijeda</string>
    <string name="thursday">Četvrtak</string>
    <string name="friday">Petak</string>
    <string name="saturday">Subota</string>
    <string name="sunday">Nedjelja</string>
    <string name="generate">Generiraj trening</string>
    <string name="preference">Vaš cilj:</string>
    <string name="experience">Vaše iskustvo:</string>
    <string name="days">Koliko dana u tjednu želite vježbati:</string>
    <string name="daysChoose">Odaberite kojim danima želite vježbat:</string>
    <string name="plan">Generirajte plan treninga</string>
    <string name="name">Ime:</string>
    <string name="lastname">Prezime:</string>
    <string name="username">Korisničko ime:</string>
    <string name="password">Lozinka:</string>
    <string name="email">Email:</string>
    <string name="edit_user">Spremi</string>
    <string name="editProfile">Uređivanje profila</string>
    <string name="save">Spremi</string>
    <string name="profileInfo">Profil</string>
    <string name="editProfileBtn">Uređivanje profila</string>
    <string name="weight">Težina</string>
    <string name="hint_username">Korisničko ime</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Lozinka</string>
    <string name="title_progress_fragment">Vaš napredak</string>
    <string name="notice_message_progress_unavailable">Još nemate spremljenih podataka o treningu</string>
    <string name="notif_logged_out">Odjavljeni ste</string>
    <string name="usernameTV">Korisničko ime:</string>
    <string name="passwordTV">Lozinka:</string>
    <string name="emailTV">Email:</string>
    <string name="weightTV">Težina:</string>
    <string name="naziv">Naziv:</string>
    <string name="opis">Opis:</string>
    <string name="bodyPartTV">Odaberi dio tijela:</string>
    <string name="difficulytTV">Odaberi težinu:</string>
    <string name="equipmentTV">Oprema:</string>

</resources>