<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark">

    <TextView
        android:id="@+id/titleRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratbold"
        android:text="@string/title_unos_napravljene_vjezbe_dialog"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:layout_marginBottom="30dp"
        android:textSize="25sp" />



    <EditText
        android:id="@+id/exercisePicker"
        android:layout_width="match_parent"
        android:background="@drawable/rounded_style"
        android:backgroundTint="@color/bg_dark_2"
        android:hint="@string/hint_search_exercise"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:textColor="@color/white"
        android:padding="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_broj_serija"
        android:textColor="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:labelFor="@id/setsInput"
         />
    <EditText
        android:id="@+id/setsInput"
        android:layout_width="match_parent"
        android:background="@drawable/rounded_style"
        android:backgroundTint="@color/bg_dark_2"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:padding="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_reps_input"
        android:textColor="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:labelFor="@id/repsInput"
        />
    <EditText
        android:id="@+id/repsInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:background="@drawable/rounded_style"
        android:backgroundTint="@color/bg_dark_2"
        android:padding="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_unos_tezine"
        android:textColor="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:labelFor="@id/weightInput"
        />
    <EditText
        android:id="@+id/weightInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:background="@drawable/rounded_style"
        android:backgroundTint="@color/bg_dark_2"
        android:padding="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:inputType="number" />

    <Button
        android:layout_width="150dp"
        android:padding="12dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/accent_color"
        android:text="@string/btn_save" />

</LinearLayout>