<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratbold"
        android:labelFor="@id/spn_preference"
        android:text="@string/preference"
        android:textSize="20dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <Spinner
        android:id="@+id/spn_preference"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratbold"
        android:text="@string/experience"
        android:textSize="20dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <Spinner
        android:id="@+id/spn_experience"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratbold"
        android:labelFor="@id/spn_days"
        android:text="@string/days"
        android:textSize="20dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <Spinner
        android:id="@+id/spn_days"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</LinearLayout>